--- a/platzi_course/public/css/app.css
+++ b/platzi_course/public/css/app.css
@@ -485,6 +485,23 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+}.container {
+  width: 100%;
+}@media (min-width: 640px) {.container {
+    max-width: 640px;
+  }
+}@media (min-width: 768px) {.container {
+    max-width: 768px;
+  }
+}@media (min-width: 1024px) {.container {
+    max-width: 1024px;
+  }
+}@media (min-width: 1280px) {.container {
+    max-width: 1280px;
+  }
+}@media (min-width: 1536px) {.container {
+    max-width: 1536px;
+  }
 }.sr-only {
   position: absolute;
   width: 1px;
@@ -503,6 +520,10 @@ video {
   position: relative;
 }.inset-0 {
   inset: 0px;
+}.-bottom-20 {
+  bottom: -5rem;
+}.-right-4 {
+  right: -1rem;
 }.left-0 {
   left: 0px;
 }.right-0 {
@@ -526,6 +547,8 @@ video {
   margin-bottom: 1rem;
 }.mb-6 {
   margin-bottom: 1.5rem;
+}.mb-8 {
+  margin-bottom: 2rem;
 }.ml-1 {
   margin-left: 0.25rem;
 }.ml-12 {
@@ -562,6 +585,8 @@ video {
   display: grid;
 }.hidden {
   display: none;
+}.h-1 {
+  height: 0.25rem;
 }.h-16 {
   height: 4rem;
 }.h-20 {
@@ -576,8 +601,12 @@ video {
   height: 2rem;
 }.h-9 {
   height: 2.25rem;
+}.h-96 {
+  height: 24rem;
 }.min-h-screen {
   min-height: 100vh;
+}.w-1\/2 {
+  width: 50%;
 }.w-20 {
   width: 5rem;
 }.w-3\/4 {
@@ -596,6 +625,8 @@ video {
   width: auto;
 }.w-full {
   width: 100%;
+}.max-w-3xl {
+  max-width: 48rem;
 }.max-w-6xl {
   max-width: 72rem;
 }.max-w-7xl {
@@ -606,6 +637,8 @@ video {
   flex: 1 1 0%;
 }.shrink-0 {
   flex-shrink: 0;
+}.flex-grow {
+  flex-grow: 1;
 }.origin-top {
   transform-origin: top;
 }.origin-top-left {
@@ -644,6 +677,8 @@ video {
   justify-content: space-between;
 }.justify-items-center {
   justify-items: center;
+}.gap-2 {
+  gap: 0.5rem;
 }.gap-4 {
   gap: 1rem;
 }.space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -666,6 +701,8 @@ video {
   overflow-y: hidden;
 }.rounded {
   border-radius: 0.25rem;
+}.rounded-full {
+  border-radius: 9999px;
 }.rounded-lg {
   border-radius: 0.5rem;
 }.rounded-md {
@@ -684,10 +721,10 @@ video {
   border-bottom-width: 2px;
 }.border-l-4 {
   border-left-width: 4px;
-}.border-t {
-  border-top-width: 1px;
 }.border-r {
   border-right-width: 1px;
+}.border-t {
+  border-top-width: 1px;
 }.border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
@@ -697,38 +734,44 @@ video {
 }.border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
 }.border-transparent {
   border-color: transparent;
-}.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }.bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }.bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }.bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }.bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
+}.bg-indigo-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }.bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}.bg-indigo-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }.fill-current {
   fill: currentColor;
 }.p-2 {
@@ -743,6 +786,9 @@ video {
 }.px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }.px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -758,6 +804,9 @@ video {
 }.py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }.py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -791,6 +840,12 @@ video {
   text-align: center;
 }.font-sans {
   font-family: Figtree, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -818,12 +873,14 @@ video {
   line-height: 1.25rem;
 }.leading-7 {
   line-height: 1.75rem;
+}.leading-loose {
+  line-height: 2;
 }.leading-tight {
   line-height: 1.25;
-}.tracking-widest {
-  letter-spacing: 0.1em;
 }.tracking-wider {
   letter-spacing: 0.05em;
+}.tracking-widest {
+  letter-spacing: 0.1em;
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -857,15 +914,15 @@ video {
 }.text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
+}.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }.text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -875,6 +932,10 @@ video {
   opacity: 0;
 }.opacity-100 {
   opacity: 1;
+}.opacity-20 {
+  opacity: 0.2;
+}.opacity-60 {
+  opacity: 0.6;
 }.opacity-75 {
   opacity: 0.75;
 }.shadow {
